--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Matmac Portfolio</title>
 </head>
 <body>
-  <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FnyFJx8Uc7zPt0tJRrI4WSa%2FMatmac-Portfolio%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
+  <iframe width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FnyFJx8Uc7zPt0tJRrI4WSa%2FMatmac-Portfolio%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
 </body>
 </html>
