--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>Matmac Portfolio</title>
 </head>
 <body style="padding: 0; margin: 0; display: flex; height: 100vh;">
-  <div style="position: absolute; height: 80px; background-color: #e5e5e5; width: 100%; z-index: 10; display:flex; align-items: center; flex-direction: row; padding: 0 24px 0 24px;">
+  <div style="position: absolute; height: 80px; background-color: #e5e5e5; width: calc(100% - 48px); z-index: 10; display:flex; align-items: center; flex-direction: row; padding: 0 24px 0 24px; justify-content: space-between;">
     <img src="./assets/logo-matmac.svg" alt="Matmac - Design Manager">
+    <a href="mailto:hello@matmac.design" style="color: #39474E; font-family: Helvetica, sans-serif; font-weight: 700; text-decoration: none; font-size: 14px;" onMouseOver="this.style.borderColor='#7D8E97'" onMouseOut="this.style.borderColor='#39474E'">hello@matmac.design</a>
   </div>
   <iframe style="border: 0 none; display: block;" width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FnyFJx8Uc7zPt0tJRrI4WSa%2FMatmac-Portfolio%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
 </body>
