encode hide ui and and add scaling min zoom

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <img src="./assets/logo-matmac.svg" alt="Matmac - Design Manager">
     <a href="mailto:hello@matmac.design" style="color: #39474E; font-family: Helvetica, sans-serif; font-weight: 700; text-decoration: none; font-size: 14px;" onMouseOver="this.style.borderColor='#7D8E97'" onMouseOut="this.style.borderColor='#39474E'">hello@matmac.design</a>
   </div>
-  <iframe style="border: 0 none; display: block; background: #e5e5e5;" width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FnyFJx8Uc7zPt0tJRrI4WSa%2FMatmac-Portfolio%3Fnode-id%3D0%253A1&hide-ui=1" allowfullscreen></iframe>
+  <iframe style="border: 0 none; display: block; background: #e5e5e5;" width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FnyFJx8Uc7zPt0tJRrI4WSa%2FMatmac-Portfolio%3Fnode-id%3D0%253A1%26hide-ui%3D1%26scaling%3Dmin-zoom" allowfullscreen></iframe>
 </body>
 </html>
