--- a/index.html
+++ b/index.html
@@ -4,14 +4,71 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">  
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;600&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
   <title>Matmac Portfolio</title>
 </head>
-<body style="padding: 0; margin: 0; display: flex; height: 100vh;">
-  <div style="position: absolute; height: 80px; background-color: #e5e5e5; width: calc(100% - 48px); z-index: 10; display:flex; align-items: center; flex-direction: row; padding: 0 24px 0 24px; justify-content: space-between;">
-    <img src="./assets/logo-matmac.svg" alt="Matmac - Design Manager">
-    <a href="mailto:hello@matmac.design" style="color: #39474E; font-family: Helvetica, sans-serif; font-weight: 700; text-decoration: none; font-size: 14px;" onMouseOver="this.style.borderColor='#7D8E97'" onMouseOut="this.style.borderColor='#39474E'">hello@matmac.design</a>
-  </div>
-  <iframe style="border: 0 none; display: block; background: #e5e5e5;" width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FnyFJx8Uc7zPt0tJRrI4WSa%2FMatmac-Portfolio%3Fpage-id%3D315%253A7051%26node-id%3D327%253A30669%26viewport%3D241%252C48%252C0.14%26scaling%3Dmin-zoom%26hide-ui%3D1" allowfullscreen></iframe>
+<body class="padding-0 margin-0 flex flex-1 h-screen justify-center" style="background-color: #DFDFDF;">
+  <header class="absolute h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
+    <a href="./"><img src="./assets/logo-matmac.svg" alt="Matmac - Design Manager"></a>
+    <a class="text-[#39474E] text-[14px] no-underline font-semibold" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">hello@matmac.design</a>
+  </header>
+  <nav class="pl-12 flex items-center absolute left-0 inset-y-1/2" style="font-family: Inter, sans-serif; font-size: 14px;">
+    <ul class="h-[320px] flex flex-col justify-between">
+      <li>
+        <a class="group relative inline-flex w-[49px] h-[33px]" href="#">
+          <img class="z-10 transition-opacity group-hover:opacity-0" src="assets/nav-helzi.svg" alt="Helzi project">
+          <img class="absolute top-0 left-0 z-0 opacity-0 transition-opacity group-hover:opacity-100" src="assets/nav-hover-helzi.svg" alt="Helzi project">
+        </a>
+      </li>
+      <li>
+        <a class="group relative inline-flex w-[83px] h-[20px]" href="#">
+          <img class="z-10 transition-opacity group-hover:opacity-0" src="assets/nav-amazon.svg" alt="Amazon project">
+          <img class="absolute top-0 left-0 z-0 opacity-0 transition-opacity group-hover:opacity-100" src="assets/nav-hover-amazon.svg" alt="Helzi project">
+        </a>
+      </li>
+      <li class="-mt-2">
+        <a class="group relative inline-flex w-[72px] h-[20px]" href="#">
+          <img class="z-10 transition-opacity group-hover:opacity-0" src="assets/nav-linkedin.svg" alt="Linkedin project">
+          <img class="absolute top-0 left-0 z-0 opacity-0 transition-opacity group-hover:opacity-100" src="assets/nav-hover-linkedin.svg" alt="Helzi project">
+        </a>
+      </li>
+      <li>
+        <a class="group relative inline-flex w-[58px] h-[11px]" href="#">
+          <img class="z-10 transition-opacity group-hover:opacity-0" src="assets/nav-sony.svg" alt="Sony project">
+          <img class="absolute top-0 left-0 z-0 opacity-0 transition-opacity group-hover:opacity-100" src="assets/nav-hover-sony.svg" alt="Helzi project">
+        </a>
+      </li>
+      <li>
+        <a class="group relative inline-flex w-[63px] h-[15px]" href="#">
+          <img class="z-10 transition-opacity group-hover:opacity-0" src="assets/nav-posters.svg" alt="Posters project">
+          <img class="absolute top-0 left-0 z-0 opacity-0 transition-opacity group-hover:opacity-100" src="assets/nav-hover-posters.svg" alt="Helzi project">
+        </a>
+      </li>
+      <li class="-mt-4">
+        <a class="group relative inline-flex w-[136px] h-[26px]" href="#">
+          <img class="z-10 transition-opacity group-hover:opacity-0" src="assets/nav-tnl.svg" alt="Tradenolimits project">
+          <img class="absolute top-0 left-0 z-0 opacity-0 transition-opacity group-hover:opacity-100" src="assets/nav-hover-tnl.svg" alt="Helzi project">
+        </a>
+      </li>
+    </ul>
+  </nav>
+  <section class="flex flex-1 items-center justify-center flex-col">
+    <div class="relative">
+      <img class="absolute right-0 top-0 z-20 animate-[spin_10s_linear_infinite]" src="assets/available.svg" />
+      <img class="relative z-10 mt-10" src="assets/matmacintosh.png" width="300" height="300" alt="Matmac Portfolio"/>
+    </div>
+    <p class="max-w-[50vw] text-center mt-[-45px] leading-none tracking-tight text-[#39474E] font-semibold" style="font-family: Inter, sans-serif; font-size: 70px;">I'm Matias Bejas, Design Lead & UX/UI Expert</p>
+    <p class="max-w-[50vw] text-center mt-8 leading-none text-[#8A9AA3]" style="font-family: Inter, sans-serif; font-size: 20px;">I help industry leaders & startups create remarkable user-driven experiences</p>
+  </section>
+  <footer class="absolute bottom-0 w-screen mb-6 px-12 text-[#39474e] font-semibold text-[14px]" style="font-family: Inter, sans-serif;">
+    &copy;
+    <span id="copyright">
+      <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
+    </span>
+  </footer>
 </body>
 </html>
