--- a/index.html
+++ b/index.html
@@ -9,66 +9,55 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>Matmac Portfolio</title>
+  <title>Matias Bejas - Design Lead - UX/UI Expert</title>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          keyframes: {
+            curtain: {
+              '0%': { transform: 'scaleY(1)' },
+              '100%': { transform: 'scaleY(0)' },
+            }
+          },
+          animation: {
+            'curtain-ease': 'curtain 0.6s cubic-bezier(.70,0,.35,1) forwards',
+          }
+        }
+      }
+    }
+  </script>
 </head>
 <body class="padding-0 margin-0 flex flex-1 h-screen justify-center" style="background-color: #DFDFDF;">
+  <div class="absolute w-screen h-screen bg-[#1446E7] z-50 transition-all animate-curtain-ease origin-top"></div>
   <header class="absolute h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
     <a href="./"><img src="./assets/logo-matmac.svg" alt="Matmac - Design Manager"></a>
-    <a class="text-[#39474E] text-[14px] no-underline font-semibold" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">hello@matmac.design</a>
+    <div>
+      <a class="text-[#39474E] text-base no-underline font-regular border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="/projects" style="font-family: Inter, sans-serif;">Projects</a>
+      <a class="text-[#39474E] text-base no-underline font-regular mx-6 border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="/about" style="font-family: Inter, sans-serif;">About</a>
+      <a class="text-[#39474E] text-base no-underline font-regular border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
+    </div>
   </header>
-  <nav class="pl-12 flex items-center absolute left-0 inset-y-1/2" style="font-family: Inter, sans-serif; font-size: 14px;">
-    <ul class="h-[320px] flex flex-col justify-between">
-      <li>
-        <a class="group relative inline-flex w-[49px] h-[33px]" href="#">
-          <img class="z-10 transition-opacity group-hover:opacity-0" src="assets/nav-helzi.svg" alt="Helzi project">
-          <img class="absolute top-0 left-0 z-0 opacity-0 transition-opacity group-hover:opacity-100" src="assets/nav-hover-helzi.svg" alt="Helzi project">
-        </a>
-      </li>
-      <li>
-        <a class="group relative inline-flex w-[83px] h-[20px]" href="#">
-          <img class="z-10 transition-opacity group-hover:opacity-0" src="assets/nav-amazon.svg" alt="Amazon project">
-          <img class="absolute top-0 left-0 z-0 opacity-0 transition-opacity group-hover:opacity-100" src="assets/nav-hover-amazon.svg" alt="Helzi project">
-        </a>
-      </li>
-      <li class="-mt-2">
-        <a class="group relative inline-flex w-[72px] h-[20px]" href="#">
-          <img class="z-10 transition-opacity group-hover:opacity-0" src="assets/nav-linkedin.svg" alt="Linkedin project">
-          <img class="absolute top-0 left-0 z-0 opacity-0 transition-opacity group-hover:opacity-100" src="assets/nav-hover-linkedin.svg" alt="Helzi project">
-        </a>
-      </li>
-      <li>
-        <a class="group relative inline-flex w-[58px] h-[11px]" href="#">
-          <img class="z-10 transition-opacity group-hover:opacity-0" src="assets/nav-sony.svg" alt="Sony project">
-          <img class="absolute top-0 left-0 z-0 opacity-0 transition-opacity group-hover:opacity-100" src="assets/nav-hover-sony.svg" alt="Helzi project">
-        </a>
-      </li>
-      <li>
-        <a class="group relative inline-flex w-[63px] h-[15px]" href="#">
-          <img class="z-10 transition-opacity group-hover:opacity-0" src="assets/nav-posters.svg" alt="Posters project">
-          <img class="absolute top-0 left-0 z-0 opacity-0 transition-opacity group-hover:opacity-100" src="assets/nav-hover-posters.svg" alt="Helzi project">
-        </a>
-      </li>
-      <li class="-mt-4">
-        <a class="group relative inline-flex w-[136px] h-[26px]" href="#">
-          <img class="z-10 transition-opacity group-hover:opacity-0" src="assets/nav-tnl.svg" alt="Tradenolimits project">
-          <img class="absolute top-0 left-0 z-0 opacity-0 transition-opacity group-hover:opacity-100" src="assets/nav-hover-tnl.svg" alt="Helzi project">
-        </a>
-      </li>
-    </ul>
-  </nav>
   <section class="flex flex-1 items-center justify-center flex-col">
     <div class="relative">
       <img class="absolute right-0 top-0 z-20 animate-[spin_10s_linear_infinite]" src="assets/available.svg" />
       <img class="relative z-10 mt-10" src="assets/matmacintosh.png" width="300" height="300" alt="Matmac Portfolio"/>
     </div>
     <p class="max-w-[50vw] text-center mt-[-45px] leading-none tracking-tight text-[#39474E] font-semibold" style="font-family: Inter, sans-serif; font-size: 70px;">I'm Matias Bejas, Design Lead & UX/UI Expert</p>
-    <p class="max-w-[50vw] text-center mt-8 leading-none text-[#8A9AA3]" style="font-family: Inter, sans-serif; font-size: 20px;">I help industry leaders & startups create remarkable user-driven experiences</p>
+    <p class="max-w-[50vw] text-center mt-8 leading-none text-[#8A9AA3] text-[20px] font-regular" style="font-family: Inter, sans-serif;">I help industry leaders & startups create remarkable user-driven experiences</p>
   </section>
-  <footer class="absolute bottom-0 w-screen mb-6 px-12 text-[#39474e] font-semibold text-[14px]" style="font-family: Inter, sans-serif;">
-    &copy;
-    <span id="copyright">
-      <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
-    </span>
+  <footer class="absolute bottom-0 w-screen mb-8 px-12 text-[#39474e] text-base flex flex-row justify-between" style="font-family: Inter, sans-serif;">
+    <div>
+      <a class="text-[#39474E] font-regular border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="https://www.linkedin.com/in/matiasbejas/" target="_blank" style="font-family: Inter, sans-serif;">Linkedin</a>
+      <a class="text-[#39474E] font-regular mx-6 border-b hover:border-[#ea4c89] hover:text-[#ea4c89]" href="https://dribbble.com/matmac" target="_blank" style="font-family: Inter, sans-serif;">Dribbble</a>
+      <a class="text-[#39474E] font-regular border-b hover:border-[#bc2a8d] hover:text-[#bc2a8d]" href="https://www.instagram.com/thematmac/" target="_blank" style="font-family: Inter, sans-serif;">Instagram</a>
+    </div>
+    <div>
+      &copy; Copyright
+      <span id="copyright">
+        <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
+      </span>
+    </div>
   </footer>
 </body>
 </html>
