--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
   <header class="absolute h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
     <a href="./"><img src="./assets/logo-matmac.svg" alt="Matmac - Design Manager"></a>
     <div>
-      <a class="text-[#39474E] text-base no-underline font-regular border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="./projects" style="font-family: Inter, sans-serif;">Projects</a>
-      <a class="text-[#39474E] text-base no-underline font-regular mx-6 border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="./about" style="font-family: Inter, sans-serif;">About</a>
-      <a class="text-[#39474E] text-base no-underline font-regular border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
+      <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="./projects" style="font-family: Inter, sans-serif;">Projects</a>
+      <a class="text-[#39474E] text-base no-underline font-regular mx-6 hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="./about" style="font-family: Inter, sans-serif;">About</a>
+      <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
     </div>
   </header>
   <section class="flex flex-1 items-center justify-center flex-col">
@@ -73,8 +73,8 @@
           transform="">
         <animate
           dur="2"
-          begin="0"
-          end="4s"
+          begin="3"
+          end="7s"
           from="0"
           values="0,1739;1739,0;"
           id="hello1"
@@ -127,9 +127,9 @@
   </section>
   <footer class="absolute bottom-0 w-screen mb-8 px-12 text-[#39474e] text-base flex flex-row justify-between" style="font-family: Inter, sans-serif;">
     <div>
-      <a class="text-[#39474E] font-regular border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="https://www.linkedin.com/in/matiasbejas/" target="_blank" style="font-family: Inter, sans-serif;">Linkedin</a>
-      <a class="text-[#39474E] font-regular mx-6 border-b hover:border-[#ea4c89] hover:text-[#ea4c89]" href="https://dribbble.com/matmac" target="_blank" style="font-family: Inter, sans-serif;">Dribbble</a>
-      <a class="text-[#39474E] font-regular border-b hover:border-[#bc2a8d] hover:text-[#bc2a8d]" href="https://www.instagram.com/thematmac/" target="_blank" style="font-family: Inter, sans-serif;">Instagram</a>
+      <a class="text-[#39474E] font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="https://www.linkedin.com/in/matiasbejas/" target="_blank" style="font-family: Inter, sans-serif;">Linkedin</a>
+      <a class="text-[#39474E] font-regular mx-6 hover:border-b hover:border-[#ea4c89] hover:text-[#ea4c89]" href="https://dribbble.com/matmac" target="_blank" style="font-family: Inter, sans-serif;">Dribbble</a>
+      <a class="text-[#39474E] font-regular hover:border-b hover:border-[#bc2a8d] hover:text-[#bc2a8d]" href="https://www.instagram.com/thematmac/" target="_blank" style="font-family: Inter, sans-serif;">Instagram</a>
     </div>
     <div>
       &copy; Copyright
