--- a/projects/helzi/index.html
+++ b/projects/helzi/index.html
@@ -4,14 +4,35 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">  
+  <link rel="shortcut icon" href="../../favicon.png" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;600&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
   <title>Matmac Portfolio</title>
 </head>
-<body style="padding: 0; margin: 0; display: flex; height: 100vh;">
-  <div style="position: absolute; height: 80px; background-color: #e5e5e5; width: calc(100% - 48px); z-index: 10; display:flex; align-items: center; flex-direction: row; padding: 0 24px 0 24px; justify-content: space-between;">
-    <img src="./assets/logo-matmac.svg" alt="Matmac - Design Manager">
-    <a href="mailto:hello@matmac.design" style="color: #39474E; font-family: Helvetica, sans-serif; font-weight: 700; text-decoration: none; font-size: 14px;" onMouseOver="this.style.borderColor='#7D8E97'" onMouseOut="this.style.borderColor='#39474E'">hello@matmac.design</a>
-  </div>
-  <iframe style="border: 0 none; display: block; background: #e5e5e5;" width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FnyFJx8Uc7zPt0tJRrI4WSa%2FMatmac-Portfolio%3Fpage-id%3D315%253A7051%26node-id%3D327%253A30669%26viewport%3D241%252C48%252C0.14%26scaling%3Dmin-zoom%26hide-ui%3D1" allowfullscreen></iframe>
+<body class="padding-0 margin-0 flex flex-1 h-screen justify-center" style="background-color: #DFDFDF;">
+  <header class="absolute h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
+    <a href="./"><img src="../../assets/logo-matmac.svg" alt="Matmac - Design Manager"></a>
+    <div>
+      <a class="text-base no-underline font-regular border-b border-[#1446E7] text-[#1446E7]" href="/projects" style="font-family: Inter, sans-serif;">Projects</a>
+      <a class="text-[#39474E] text-base no-underline font-regular mx-6 hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="/about" style="font-family: Inter, sans-serif;">About</a>
+      <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
+    </div>
+  </header>
+  <iframe style="border: 0 none; display: block; background: #e5e5e5;" width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fq0kan3jZ1fNHzxcd69WeBT%2FPortfolio-Helzi%3Fpage-id%3D0%253A1%26node-id%3D2%253A105%26viewport%3D241%252C48%252C0.68%26scaling%3Dmin-zoom%26starting-point-node-id%3D2%253A105%26hide-ui%3D1" allowfullscreen></iframe>
+  <footer class="absolute bottom-0 w-screen mb-8 px-12 text-[#39474e] text-base flex flex-row justify-between" style="font-family: Inter, sans-serif;">
+    <div>
+      <a class="text-[#39474E] font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="https://www.linkedin.com/in/matiasbejas/" target="_blank" style="font-family: Inter, sans-serif;">Linkedin</a>
+      <a class="text-[#39474E] font-regular mx-6 hover:border-b hover:border-[#ea4c89] hover:text-[#ea4c89]" href="https://dribbble.com/matmac" target="_blank" style="font-family: Inter, sans-serif;">Dribbble</a>
+      <a class="text-[#39474E] font-regular hover:border-b hover:border-[#bc2a8d] hover:text-[#bc2a8d]" href="https://www.instagram.com/thematmac/" target="_blank" style="font-family: Inter, sans-serif;">Instagram</a>
+    </div>
+    <div>
+      &copy; Copyright
+      <span id="copyright">
+        <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
+      </span>
+    </div>
+  </footer>
 </body>
 </html>
