--- a/projects/index.html
+++ b/projects/index.html
@@ -4,35 +4,103 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../favicon.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <title>Matias Bejas - Projects</title>
+  <style>
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    .no-scrollbar {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
+</style>
 </head>
 <body class="padding-0 margin-0 flex flex-1 h-screen justify-center" style="background-color: #DFDFDF;">
-  <div class="absolute flex flex-col items-center justify-center w-screen h-screen bg-[#1446E7] z-50 transition-all animate-curtain-top origin-top">
-    <img class="mx-auto top-[50vh] mb-2" src="assets/matmac-light.svg" alt="Matmac Portfolio">
-    <div class="w-[100px] overflow-hidden">
-      <div class="h-[1px] bg-white w-[100px] transition-all animate-slide-x origin-left"></div>
-    </div>
-  </div>
   <header class="absolute h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
-    <a href="./"><img src="./assets/logo-matmac.svg" alt="Matmac - Design Manager"></a>
+    <a href="./"><img src="../assets/logo-matmac.svg" alt="Matmac - Design Manager"></a>
     <div>
-      <a class="text-[#39474E] text-base no-underline font-regular border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="/projects" style="font-family: Inter, sans-serif;">Projects</a>
-      <a class="text-[#39474E] text-base no-underline font-regular mx-6 border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="/about" style="font-family: Inter, sans-serif;">About</a>
-      <a class="text-[#39474E] text-base no-underline font-regular border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
+      <a class="text-base no-underline font-regular border-b border-[#1446E7] text-[#1446E7]" href="/projects" style="font-family: Inter, sans-serif;">Projects</a>
+      <a class="text-[#39474E] text-base no-underline font-regular mx-6 hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="/about" style="font-family: Inter, sans-serif;">About</a>
+      <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
     </div>
   </header>
   <section class="flex flex-1 items-center justify-center flex-col">
+    <ul class="flex flex-row overflow-x-auto w-screen snap-x snap-mandatory no-scrollbar py-20">
+      <li class="mr-24 snap-center">
+        <div class="w-[30vw] h-[450px]"></div>
+      </li>
+      <li class="mr-12 snap-center">
+        <div class="w-[30vw] h-[450px] flex">
+          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl">
+            <a href="./helzi/"><img class="object-cover object-left-top" src="../assets/projects-slides/helzi.jpg" alt="Helzi project"></a>
+          </div>
+        </div>
+      </li>
+      <li class="mr-12 snap-center">
+        <div class="w-[30vw] h-[450px] flex">
+          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl">
+            <img class="object-cover object-left-top" src="../assets/projects-slides/amazon.jpg" alt="Amazon project">
+          </div>
+        </div>
+      </li>
+      <li class="mr-12 snap-center">
+        <div class="w-[30vw] h-[450px] flex">
+          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl">
+            <img class="object-cover object-left-top" src="../assets/projects-slides/linkedin.jpg" alt="Linkedin project">
+          </div>
+        </div>
+      </li>
+      <li class="mr-12 snap-center">
+        <div class="w-[30vw] h-[450px] flex">
+          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl">
+            <img class="object-cover object-left-top" src="../assets/projects-slides/sony.jpg" alt="Sony project">
+          </div>
+        </div>
+      </li>
+      <li class="mr-12 snap-center">
+        <div class="w-[30vw] h-[450px] flex">
+          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl">
+            <img class="object-cover object-left-top" src="../assets/projects-slides/posters.jpg" alt="Posters project">
+          </div>
+        </div>
+      </li>
+      <li class="mr-12 snap-center">
+        <div class="w-[30vw] h-[450px] flex">
+          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl">
+            <img class="object-cover object-left-top" src="../assets/projects-slides/flow.jpg" alt="Flow project">
+          </div>
+        </div>
+      </li>
+      <li class="mr-12 snap-center">
+        <div class="w-[30vw] h-[450px] flex">
+          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl">
+            <img class="object-cover object-left-top" src="../assets/projects-slides/holafly.jpg" alt="Holafly project">
+          </div>
+        </div>
+      </li>
+      <li class="mr-12 snap-center">
+        <div class="w-[30vw] h-[450px] flex">
+          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl">
+            <img class="object-cover object-left-top" src="../assets/projects-slides/tnl.jpg" alt="Tradenolimits project">
+          </div>
+        </div>
+      </li>
+      <li class="snap-center">
+        <div class="w-[30vw] h-[450px]"></div>
+      </li>
+    </ul>
   </section>
   <footer class="absolute bottom-0 w-screen mb-8 px-12 text-[#39474e] text-base flex flex-row justify-between" style="font-family: Inter, sans-serif;">
     <div>
-      <a class="text-[#39474E] font-regular border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="https://www.linkedin.com/in/matiasbejas/" target="_blank" style="font-family: Inter, sans-serif;">Linkedin</a>
-      <a class="text-[#39474E] font-regular mx-6 border-b hover:border-[#ea4c89] hover:text-[#ea4c89]" href="https://dribbble.com/matmac" target="_blank" style="font-family: Inter, sans-serif;">Dribbble</a>
-      <a class="text-[#39474E] font-regular border-b hover:border-[#bc2a8d] hover:text-[#bc2a8d]" href="https://www.instagram.com/thematmac/" target="_blank" style="font-family: Inter, sans-serif;">Instagram</a>
+      <a class="text-[#39474E] font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="https://www.linkedin.com/in/matiasbejas/" target="_blank" style="font-family: Inter, sans-serif;">Linkedin</a>
+      <a class="text-[#39474E] font-regular mx-6 hover:border-b hover:border-[#ea4c89] hover:text-[#ea4c89]" href="https://dribbble.com/matmac" target="_blank" style="font-family: Inter, sans-serif;">Dribbble</a>
+      <a class="text-[#39474E] font-regular hover:border-b hover:border-[#bc2a8d] hover:text-[#bc2a8d]" href="https://www.instagram.com/thematmac/" target="_blank" style="font-family: Inter, sans-serif;">Instagram</a>
     </div>
     <div>
       &copy; Copyright
