change root url for header

--- a/projects/helzi/index.html
+++ b/projects/helzi/index.html
@@ -13,7 +13,7 @@
 </head>
 <body class="padding-0 margin-0 flex flex-1 h-screen justify-center" style="background-color: #DFDFDF;">
   <header class="absolute h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
-    <a href="./"><img src="../../assets/logo-matmac.svg" alt="Matmac - Design Manager"></a>
+    <a href="/"><img src="../../assets/logo-matmac.svg" alt="Matmac - Design Manager"></a>
     <div>
       <a class="text-base no-underline font-regular border-b border-[#1446E7] text-[#1446E7]" href="/projects" style="font-family: Inter, sans-serif;">Projects</a>
       <a class="text-[#39474E] text-base no-underline font-regular mx-6 hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="/about" style="font-family: Inter, sans-serif;">About</a>
