--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
   </div>
   <header class="absolute h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
-    <a href="./"><img src="./assets/logo-matmac.svg" alt="Matmac - Design Manager"></a>
+    <a href="/"><img src="./assets/logo-matmac.svg" alt="Matmac - Design Manager"></a>
     <div>
       <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="./projects" style="font-family: Inter, sans-serif;">Projects</a>
       <a class="text-[#39474E] text-base no-underline font-regular mx-6 hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="./about" style="font-family: Inter, sans-serif;">About</a>
