--- a/projects/amazon/index.html
+++ b/projects/amazon/index.html
@@ -15,7 +15,7 @@
   <header class="absolute h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
     <a href="/"><img src="../../assets/logo-matmac.svg" alt="Matmac - Design Manager"></a>
     <div>
-      <a class="text-base font-regular border-b border-[#1446E7] text-[#1446E7]" href="../projects" style="font-family: Inter, sans-serif;">Projects</a>
+      <a class="text-base font-regular border-b border-[#1446E7] text-[#1446E7]" href="../../projects" style="font-family: Inter, sans-serif;">Projects</a>
       <a class="text-[#39474E] text-base no-underline font-regular mx-6 hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="/about" style="font-family: Inter, sans-serif;">About</a>
       <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
     </div>
