--- a/projects/index.html
+++ b/projects/index.html
@@ -45,7 +45,7 @@
       <li class="mr-12 snap-center">
         <div class="w-[30vw] h-[450px] flex">
           <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl">
-            <img class="object-cover object-left-top" src="../assets/projects-slides/amazon.jpg" alt="Amazon project">
+            <a href="./helzi/"><img class="object-cover object-left-top" src="../assets/projects-slides/amazon.jpg" alt="Amazon project"></a>
           </div>
         </div>
       </li>
