add sony project

--- a/projects/index.html
+++ b/projects/index.html
@@ -59,7 +59,7 @@
       <li class="mr-12 snap-center">
         <div class="w-[30vw] h-[450px] flex">
           <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl">
-            <img class="object-cover object-left-top" src="../assets/projects-slides/sony.jpg" alt="Sony project">
+            <a href="./sony/"><img class="object-cover object-left-top" src="../assets/projects-slides/sony.jpg" alt="Sony project"></a>
           </div>
         </div>
       </li>
