--- a/projects/index.html
+++ b/projects/index.html
@@ -21,7 +21,7 @@
     }
 </style>
 </head>
-<body class="padding-0 margin-0 flex flex-1 h-screen justify-center" style="background-color: #DFDFDF;">
+<body class="flex justify-center flex-1 h-screen padding-0 margin-0" style="background-color: #DFDFDF;">
   <header class="absolute h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
     <a href="/"><img src="../assets/logo-matmac.svg" alt="Matmac - Design Manager"></a>
     <div>
@@ -30,64 +30,64 @@
       <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
     </div>
   </header>
-  <section class="flex flex-1 items-center justify-center flex-col">
-    <ul class="flex flex-row overflow-x-auto w-screen snap-x snap-mandatory no-scrollbar py-20">
+  <section class="flex flex-col items-center justify-center flex-1">
+    <ul class="flex flex-row items-center w-screen h-screen overflow-x-auto snap-x snap-mandatory no-scrollbar">
       <li class="mr-24 snap-center">
         <div class="w-[30vw] h-[450px]"></div>
       </li>
       <li class="mr-12 snap-center">
         <div class="w-[30vw] h-[450px] flex">
-          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl">
-            <a href="./helzi/"><img class="object-cover object-left-top" src="../assets/projects-slides/helzi.jpg" alt="Helzi project"></a>
+          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
+            <a class="flex" href="./helzi/"><img class="object-cover object-left-top transition-all duration-[1000ms] hover:scale-105" src="../assets/projects-slides/helzi.jpg" alt="Helzi project"></a>
           </div>
         </div>
       </li>
       <li class="mr-12 snap-center">
         <div class="w-[30vw] h-[450px] flex">
-          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl">
-            <a href="./amazon/"><img class="object-cover object-left-top" src="../assets/projects-slides/amazon.jpg" alt="Amazon project"></a>
+          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
+            <a class="flex" href="./amazon/"><img class="object-cover object-left-top transition-all duration-[1000ms] hover:scale-105" src="../assets/projects-slides/amazon.jpg" alt="Amazon project"></a>
           </div>
         </div>
       </li>
       <li class="mr-12 snap-center">
         <div class="w-[30vw] h-[450px] flex">
-          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl">
-            <a href="./linkedin/"><img class="object-cover object-left-top" src="../assets/projects-slides/linkedin.jpg" alt="Linkedin project"></a>
+          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
+            <a class="flex" href="./linkedin/"><img class="object-cover object-left-top transition-all duration-[1000ms] hover:scale-105" src="../assets/projects-slides/linkedin.jpg" alt="Linkedin project"></a>
           </div>
         </div>
       </li>
       <li class="mr-12 snap-center">
         <div class="w-[30vw] h-[450px] flex">
-          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl">
-            <a href="./sony/"><img class="object-cover object-left-top" src="../assets/projects-slides/sony.jpg" alt="Sony project"></a>
+          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
+            <a class="flex" href="./sony/"><img class="object-cover object-left-top transition-all duration-[1000ms] hover:scale-105" src="../assets/projects-slides/sony.jpg" alt="Sony project"></a>
           </div>
         </div>
       </li>
       <li class="mr-12 snap-center">
         <div class="w-[30vw] h-[450px] flex">
-          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl">
-            <img class="object-cover object-left-top" src="../assets/projects-slides/posters.jpg" alt="Posters project">
+          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
+            <img class="object-cover object-left-top transition-all duration-[1000ms] hover:scale-105" src="../assets/projects-slides/posters.jpg" alt="Posters project">
           </div>
         </div>
       </li>
       <li class="mr-12 snap-center">
         <div class="w-[30vw] h-[450px] flex">
-          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl">
-            <img class="object-cover object-left-top" src="../assets/projects-slides/flow.jpg" alt="Flow project">
+          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
+            <img class="object-cover object-left-top transition-all duration-[1000ms] hover:scale-105" src="../assets/projects-slides/flow.jpg" alt="Flow project">
           </div>
         </div>
       </li>
       <li class="mr-12 snap-center">
         <div class="w-[30vw] h-[450px] flex">
-          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl">
-            <img class="object-cover object-left-top" src="../assets/projects-slides/holafly.jpg" alt="Holafly project">
+          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
+            <img class="object-cover object-left-top transition-all duration-[1000ms] hover:scale-105" src="../assets/projects-slides/holafly.jpg" alt="Holafly project">
           </div>
         </div>
       </li>
       <li class="mr-12 snap-center">
         <div class="w-[30vw] h-[450px] flex">
-          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl">
-            <img class="object-cover object-left-top" src="../assets/projects-slides/tnl.jpg" alt="Tradenolimits project">
+          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
+            <img class="object-cover object-left-top transition-all duration-[1000ms] hover:scale-105" src="../assets/projects-slides/tnl.jpg" alt="Tradenolimits project">
           </div>
         </div>
       </li>
