change header and footer position, add about page

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
     }
   </script>
 </head>
-<body class="flex justify-center flex-1 h-screen padding-0 margin-0" style="background-color: #DFDFDF;">
+<body class="flex justify-center flex-1 h-screen p-0 m-0" style="background-color: #DFDFDF;">
   <div class="absolute flex flex-col items-center justify-center w-screen h-screen bg-[#1446E7] z-50 transition-all animate-curtain-top origin-top">
     <img class="mx-auto top-[50vh] mb-2" src="assets/matmac-light.svg" width="101" height="17" alt="Matmac Portfolio">
     <div class="w-[100px] overflow-hidden">
       <div class="h-[1px] bg-white w-[100px] transition-all animate-slide-x origin-left"></div>
     </div>
   </div>
-  <header class="absolute h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
+  <header class="fixed h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
     <h1><a href="/"><img src="./assets/logo-matmac.svg" width="100" height="25" alt="Matmac - Design Manager"></a></h1>
     <div>
       <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="./projects" style="font-family: Inter, sans-serif;">Projects</a>
@@ -130,7 +130,7 @@
     <h2 class="max-w-[50vw] text-center mt-[-45px] leading-none tracking-tight text-[#39474E] font-semibold" style="font-family: Inter, sans-serif; font-size: 70px;">I'm Matias Bejas, Design Lead & UX/UI Expert</h2>
     <h3 class="max-w-[50vw] text-center mt-8 leading-none text-[#8A9AA3] text-[20px] font-regular" style="font-family: Inter, sans-serif;">I help industry leaders & startups create remarkable user-driven experiences</h3>
   </section>
-  <footer class="absolute bottom-0 w-screen mb-8 px-12 text-[#39474e] text-base flex flex-row justify-between" style="font-family: Inter, sans-serif;">
+  <footer class="fixed bottom-0 w-screen mb-8 px-12 text-[#39474e] text-base flex flex-row justify-between" style="font-family: Inter, sans-serif;">
     <div>
       <a class="text-[#39474E] font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="https://www.linkedin.com/in/matiasbejas/" rel="noopener noreferrer" target="_blank" style="font-family: Inter, sans-serif;">Linkedin</a>
       <a class="text-[#39474E] font-regular mx-6 hover:border-b hover:border-[#ea4c89] hover:text-[#ea4c89]" href="https://dribbble.com/matmac" rel="noopener noreferrer"target="_blank" style="font-family: Inter, sans-serif;">Dribbble</a>
