--- a/projects/index.html
+++ b/projects/index.html
@@ -21,8 +21,8 @@
     }
 </style>
 </head>
-<body class="flex justify-center flex-1 h-screen padding-0 margin-0" style="background-color: #DFDFDF;">
-  <header class="absolute h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
+<body class="flex justify-center flex-1 h-screen p-0 m-0" style="background-color: #DFDFDF;">
+  <header class="fixed h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
     <a href="/"><img src="../assets/logo-matmac.svg" alt="Matmac - Design Manager"></a>
     <div>
       <a class="text-base no-underline font-regular border-b border-[#1446E7] text-[#1446E7]" href="/projects" style="font-family: Inter, sans-serif;">Projects</a>
@@ -96,7 +96,7 @@
       </li>
     </ul>
   </section>
-  <footer class="absolute bottom-0 w-screen mb-8 px-12 text-[#39474e] text-base flex flex-row justify-between" style="font-family: Inter, sans-serif;">
+  <footer class="fixed bottom-0 w-screen mb-8 px-12 text-[#39474e] text-base flex flex-row justify-between" style="font-family: Inter, sans-serif;">
     <div>
       <a class="text-[#39474E] font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="https://www.linkedin.com/in/matiasbejas/" rel="noopener noreferrer" target="_blank" style="font-family: Inter, sans-serif;">Linkedin</a>
       <a class="text-[#39474E] font-regular mx-6 hover:border-b hover:border-[#ea4c89] hover:text-[#ea4c89]" href="https://dribbble.com/matmac" rel="noopener noreferrer"target="_blank" style="font-family: Inter, sans-serif;">Dribbble</a>
