--- a/projects/sony/index.html
+++ b/projects/sony/index.html
@@ -11,8 +11,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <title>Matmac Portfolio</title>
 </head>
-<body class="padding-0 margin-0 flex flex-1 h-screen justify-center" style="background-color: #DFDFDF;">
-  <header class="absolute h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
+<body class="p-0 m-0 flex flex-1 h-screen justify-center" style="background-color: #DFDFDF;">
+  <header class="fixed h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
     <a href="/"><img src="../../assets/logo-matmac.svg" alt="Matmac - Design Manager"></a>
     <div>
       <a class="text-base font-regular border-b border-[#1446E7] text-[#1446E7]" href="../../projects" style="font-family: Inter, sans-serif;">Projects</a>
@@ -21,7 +21,7 @@
     </div>
   </header>
   <iframe style="border: 0 none; display: block; background: #e5e5e5;" width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FfPOEuw9HcxSlBc35O11Dbc%2FPortfolio-Sony%3Fpage-id%3D0%253A1%26node-id%3D1%253A2%26viewport%3D241%252C48%252C0.13%26scaling%3Dmin-zoom%26hide-ui%3D1" allowfullscreen></iframe>
-  <footer class="absolute bottom-0 w-screen mb-8 px-12 text-[#39474e] text-base flex flex-row justify-between" style="font-family: Inter, sans-serif;">
+  <footer class="fixed bottom-0 w-screen mb-8 px-12 text-[#39474e] text-base flex flex-row justify-between" style="font-family: Inter, sans-serif;">
     <div>
       <a class="text-[#39474E] font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="https://www.linkedin.com/in/matiasbejas/" rel="noopener noreferrer" target="_blank" style="font-family: Inter, sans-serif;">Linkedin</a>
       <a class="text-[#39474E] font-regular mx-6 hover:border-b hover:border-[#ea4c89] hover:text-[#ea4c89]" href="https://dribbble.com/matmac" rel="noopener noreferrer"target="_blank" style="font-family: Inter, sans-serif;">Dribbble</a>
