markup changes for header, responsive homepage

--- a/about/index.html
+++ b/about/index.html
@@ -40,7 +40,7 @@
   </script>
 </head>
 <body class="flex justify-center flex-1 h-screen p-0 m-0" style="background-color: #DFDFDF;">
-  <header class="fixed h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
+  <header class="fixed top-0 h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
     <h1><a href="/"><img src="../assets/logo-matmac.svg" width="100" height="25" alt="Matmac - Design Manager"></a></h1>
     <nav role="navigation">
       <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="../projects" style="font-family: Inter, sans-serif;">Projects</a>
