--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <title>Matias Bejas - Design Lead - UX/UI Expert</title>
+  <style>
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    .no-scrollbar {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
+  </style>
   <script>
     tailwind.config = {
       theme: {
@@ -39,14 +49,14 @@
     }
   </script>
 </head>
-<body class="flex justify-center flex-1 h-screen p-0 m-0" style="background-color: #DFDFDF;">
+<body class="absolute inset-0 flex justify-center md:w-screen md:h-screen md:relative md:inset-auto" style="background-color: #DFDFDF;">
   <div class="absolute flex flex-col items-center justify-center w-screen h-screen bg-[#1446E7] z-50 transition-all animate-curtain-top origin-top">
     <img class="mx-auto top-[50vh] mt-[-60px] md:mt-0 mb-2" src="assets/matmac-light.svg" width="101" height="17" alt="Matmac Portfolio">
     <div class="w-[100px] overflow-hidden">
       <div class="h-[1px] bg-white w-[100px] transition-all animate-slide-x origin-left"></div>
     </div>
   </div>
-  <header class="fixed h-[60px] md:h-[100px] flex items-center flex-row px-6 md:px-12 justify-between w-screen z-10">
+  <header class="fixed top-0 h-[60px] md:h-[100px] flex items-center flex-row px-6 md:px-12 justify-between w-screen z-10">
     <h1><a href="/"><img src="./assets/logo-matmac.svg" width="100" height="25" alt="Matmac - Design Manager"></a></h1>
     <nav role="navigation" class="invisible md:visible">
       <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="./projects" style="font-family: Inter, sans-serif;">Projects</a>
@@ -54,8 +64,8 @@
       <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
     </nav>
   </header>
-  <section class="flex flex-col items-center justify-center flex-1">
-    <div class="relative -mt-[120px] md:-mt-0">
+  <section class="flex flex-col items-center justify-center">
+    <div class="relative">
       <div class="absolute inset-2/4 ml-[-35px] md:ml-[-50px] mt-[-37px] md:mt-[-55px] z-[40] w-[70px] md:w-[100px] h-[35px] md:h-[50px]">
         <svg class="w-full" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://web.resource.org/cc/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
           version="1.1"
