--- a/projects/linkedin/index.html
+++ b/projects/linkedin/index.html
@@ -12,7 +12,7 @@
   <title>Matmac Portfolio</title>
 </head>
 <body class="flex justify-center flex-1 h-screen p-0 m-0" style="background-color: #DFDFDF;">
-  <header class="fixed h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
+  <header class="fixed top-0 h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
     <a href="/"><img src="../../assets/logo-matmac.svg" alt="Matmac - Design Manager"></a>
     <nav role="navigation">
       <a class="text-base font-regular border-b border-[#1446E7] text-[#1446E7]" href="../../projects" style="font-family: Inter, sans-serif;">Projects</a>
